--- a/lib/Form/Tiny/Manual.pod
+++ b/lib/Form/Tiny/Manual.pod
@@ -305,6 +305,7 @@ Same as C<before_validate>, but differs in two aspects:
 
 This hook does require you to return a new input value to the validation. It is passed the same data as C<before_validate>.
 
+B<Note>: This hook is ran inside a try/catch block, so it can throw an exception in order to stop form validation if the input is malformed. This will add I<Form::Tiny::Error::InvalidFormat> error to the form.
 
 =head2 Optional behavior
 
