--- a/lib/Form/Tiny/Manual.pod
+++ b/lib/Form/Tiny/Manual.pod
@@ -437,6 +437,8 @@ Strict mode is helpful when you want to make sure you're not getting any extra d
 
 For example, if your form contains many optional fields which change often, you may want to ensure that your users are not sending anything you're not going to handle. This can help debugging and prevent errors.
 
+B<Important note>: Strict mode will cause the system to crawl your entire input data to search for any odd elements. This will cause validation to only run at about half the speed, and more importantly it will not be able to cope with circular references (even weakened). If your input data may contain circular references you should not make use of the strict mode.
+
 =head3 Filters
 
 Turned on with the C<-filtered> flag in L<Form::Tiny>.
