--- a/lib/Form/Tiny/Manual.pod
+++ b/lib/Form/Tiny/Manual.pod
@@ -527,69 +527,6 @@ Be aware of a special case, an adjustment will be inserted here automatically li
 
 this will make sure that any coercions and adjustments made in the nested form will be added to the outer form as well. If you want to specify your own adjustment here, make sure to use the data provided by the C<fields> method of the nested form.
 
-=head3 I18N
-
-I<Form::Tiny> has no system for internationalization. That being said, it makes any custom error messages for fields possible with the C<message> argument to C<form_field>. You can translate your messages there:
-
-	form_field 'translated' => (
-		type => SomeType,
-		message => do_translate('That value is no good'),
-	);
-
-For a bit more roboust solution, you can include untranslated strings in C<message> and translate errors in C<after_error> hook:
-
-	form_field 'translated_later' => (
-		type => SomeType,
-		message => 'That value is no good',
-	);
-
-	form_hook after_error => (
-		my ($self, $error) = @_;
-
-		$error->set_error(
-			do_translate($error->error)
-		);
-	);
-
-This will also translate any error you add manually in other hooks.
-
-=head3 Mixing form fields with class fields
-
-It is possible and often very helpful to have both form and class fields inside the same form class:
-
-	use Form::Tiny;
-	use Types::Standard qw(Str);
-
-	has 'user' => (
-		is => 'rw',
-	);
-
-	form_field 'username' => (
-		type => Str,
-		required => 1,
-	);
-
-	form_field 'password' => (
-		type => Str,
-		required => 1,
-	);
-
-	form_cleaner sub {
-		my ($self, $data) = @_;
-
-		# load user from the storage service using $data->{username}
-		my $user = ...;
-		if ($user->validate_password($data->{password})) {
-			# set the user for the class, will be available after validation
-			$self->user($user);
-		}
-		else {
-			$self->add_error(password => 'invalid password');
-		}
-	};
-
-While doing so, make sure not to override any of the Form::Tiny::Form symbols (Moo / Moose should complain about it when it happens).
-
 =head3 Form inheritance
 
 It is possible for Form::Tiny forms to inherit from one another, but the feature is experimental (meaning it does work, but is not tested enough and may not work properly for certain configurations).
@@ -620,36 +557,16 @@ It is possible for Form::Tiny forms to inherit from one another, but the feature
 
 It is required that class parents are specified before any calls to Form::Tiny DSL have been made.
 
-=head3 Corinna compatibility
-
-Future Perl core object orientation system named Corinna, currently implemented in L<Object::Pad>, can also be used together with Form::Tiny:
-
-	use Object::Pad;
-
-	class ParentForm :repr(HASH)
-	{
-		use Form::Tiny -nomoo;
-
-		form_field 'f1';
-	}
-
-	class ChildForm isa ParentForm :repr(HASH)
-	{
-		use Form::Tiny -nomoo;
-
-		form_field 'f2';
-	}
-
-You must use C<:repr(HASH)> on the class for it to be able to store Moo properties, as well as use C<-nomoo> flag in Form::Tiny import. Other than that, it should work the same as with any other OO system.
-
 =head1 SEE ALSO
 
 =over
 
 =item * L<Type::Tiny>, the awesome type system
 
-=item * L<Form::Tiny>, the importer and base class for this distribution
+=item * L<Form::Tiny>, the importer class for this distribution
 
-=item * L<Form::Tiny::Manual::Internals>, the Form::Tiny metamodel
+=item * L<Form::Tiny::Manual::Cookbook>, common tasks performed with Form::Tiny
+
+=item * L<Form::Tiny::Manual::Performance>, how to get the most speed out of the module
 
 =back
